RESOLVED FIXED134281
[MSE][Mac] Uncaught exception when deallocating AVSampleBufferDisplayLayer
https://bugs.webkit.org/show_bug.cgi?id=134281
Summary [MSE][Mac] Uncaught exception when deallocating AVSampleBufferDisplayLayer
Jer Noble
Reported 2014-06-24 16:30:26 PDT
[MSE][Mac] Uncaught exception when deallocating AVSampleBufferDisplayLayer
Attachments
Patch (1.82 KB, patch)
2014-06-24 16:32 PDT, Jer Noble
bfulgham: review+
Jer Noble
Comment 1 2014-06-24 16:32:44 PDT
Brent Fulgham
Comment 2 2014-06-24 16:34:51 PDT
Comment on attachment 233763 [details] Patch r=me
Jer Noble
Comment 3 2014-06-24 16:39:42 PDT
Note You need to log in before you can comment on or make changes to this bug.