[MSE][Mac] Uncaught exception when deallocating AVSampleBufferDisplayLayer https://bugs.webkit.org/show_bug.cgi?id=134281

Reviewed by Brent Fulgham.

AVSampleBufferDisplayLayer is throwing an exception from its -dealloc method because KVO observers exist
at the time of dealloc. Remove the observer for outputObscuredDueToInsufficientExternalProtection inside
-stopObservingLayer.

* platform/graphics/avfoundation/objc/SourceBufferPrivateAVFObjC.mm:
(-[WebAVSampleBufferErrorListener stopObservingLayer:]):

Canonical link: https://commits.webkit.org/152255@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170405 268f45cc-cd09-0410-ab3c-d52691b4dbfc